# license_control

./: .gitignore  LICENSE  README.md  license_control.spec  pyproject.toml
license_control/: __main__.py  app.py  utils.py  window.ui  window_ui.py
license_control/core/: __init__.py  config.py  license.py
license_control/generator/: __init__.py  create_license.py  generator.ui  generator_ui.py
license_control/parser/: __init__.py  check_license.py  parser.ui  parser_ui.py
tests/: test_license_control.py
